--- a/code/src/index.html
+++ b/code/src/index.html
@@ -1,8 +1,68 @@
 <html>
-    <head>
-    
-    </head>
-    <body>
-    
-    </body>
+
+<head>
+    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="scormHandler.js"></script>
+    <script type="text/javascript" src="screenChooser.js"></script>
+    <script type="text/javascript" src="entryHandler.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.2.5/svg.min.js"></script>
+    <script type="text/javascript" src="../include/progressMap.js"></script>
+    <script type="text/javascript" src="mapHandler.js"></script>
+
+    <link type="text/css" href="main.css" rel="stylesheet" />
+    <script>
+        var options = [
+            "100",
+            "200",
+            "300"
+        ];
+    </script>
+</head>
+
+<body>
+    <div class="page" id="firstPage">
+        <h1>How many hours do you want?</h1>
+
+        <div id="hoursSection">
+            <select class="hoursSubmission" id="hours"></select>
+
+            <input class="hoursSubmission" type="button" onclick="screenChooser.switchScreens()" value="Submit Hours" />
+        </div>
+
+        <script>
+            var hoursSelect = document.getElementById("hours")
+
+            for (var i = 0; i < options.length; ++i) {
+                hoursSelect.options[hoursSelect.options.length] = new Option(options[i], options[i]);
+            }
+        </script>
+    </div>
+    <div class="page" id="mainPage">
+        <div id="map">
+            <svg>
+                <image xmlns="http://www.w3.org/2000/svg" id="SvgjsImage1012" width="1104" height="350" xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/FantasyMap.png" />
+            </svg>
+        </div>
+
+        <div id="instructions">
+        <p>This is where you will report your completed externship hours each week. In order for you to receive credit for your externship you must complete <u>at least</u> 200 contact hours. Each week you will type in the number of hours completed, and press "Update" below. You can monitor your progress using the map or using the "Reported Externship Hours" section below. You will also see your progress reflected in your grade for this assignment. You will start with a 0%, but your grade will automatically increase as you report your externship hours. Make sure to report your hours weekly.</p>
+        </div>
+
+        <div id="hourHandler">
+            <div id="totalHours">
+                <h3>Hours Worked</h3>
+                <svg id="svgPercentage" xmlns="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%">
+                    <g>
+                        <circle cx="75" cy="75" r="55" style="fill:lightgray;" />
+                        <text x="50%" y="50%" text-anchor="middle">13%</text>
+                    </g>
+                </svg>
+                <span id="currentHours"></span> /
+                <span id="totalHours"></span>
+            </div>
+            <div id="entries"></div>
+        </div>
+    </div>
+</body>
+
 </html>
